--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,28 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^1.6.10",
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "doctrine/doctrine-migrations-bundle": "^1.3",
+        "doctrine/orm": "^2.5.11",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/twig-bundle": "^4.0",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "easycorp/easy-log-handler": "^1.0.2",
+        "symfony/debug-bundle": "^3.3|^4.0",
+        "symfony/dotenv": "^4.0",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^3.3|^4.0",
+        "symfony/stopwatch": "^3.3|^4.0",
+        "symfony/var-dumper": "^3.3|^4.0",
+        "symfony/web-profiler-bundle": "^3.3|^4.0",
+        "symfony/web-server-bundle": "^4.0"
     },
     "config": {
         "preferred-install": {
