Use gulp instead of Encore (too hard yet)

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-
 ###> symfony/framework-bundle ###
 .env
 /public/bundles/
+node_modules
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -14,8 +14,3 @@
 ###> symfony/web-server-bundle ###
 .web-server-pid
 ###< symfony/web-server-bundle ###
-
-###> symfony/webpack-encore-pack ###
-/node_modules/
-/public/build/
-###< symfony/webpack-encore-pack ###
