--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,20 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "doctrine/doctrine-migrations-bundle": "^1.3",
         "doctrine/orm": "^2.5.11",
+        "sensio/framework-extra-bundle": "^5.1",
+        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/twig-bundle": "^4.0",
-        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "easycorp/easy-log-handler": "^1.0.2",
         "symfony/debug-bundle": "^3.3|^4.0",
         "symfony/dotenv": "^4.0",
+        "symfony/maker-bundle": "^1.0",
         "symfony/monolog-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.3|^4.0",
         "symfony/stopwatch": "^3.3|^4.0",
