--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "gulp-uglify": "^3.0",
         "gulp-watch": "^4.3",
         "gulp4": "^4.0",
+        "js-yaml": "^3.10.0",
         "pump": "^1.0",
         "reveal.js": "^3.6.0"
     },
