--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "name": "pierstoval/prez_game",
     "type": "project",
     "license": "proprietary",
     "require": {
@@ -18,13 +19,10 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "easycorp/easy-log-handler": "^1.0.2",
         "symfony/debug-bundle": "^3.3|^4.0",
         "symfony/dotenv": "^4.0",
         "symfony/maker-bundle": "^1.0",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.3|^4.0",
-        "symfony/stopwatch": "^3.3|^4.0",
         "symfony/var-dumper": "^3.3|^4.0",
         "symfony/web-profiler-bundle": "^3.3|^4.0",
         "symfony/web-server-bundle": "^4.0"
@@ -38,11 +36,6 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
         }
     },
     "replace": {
@@ -61,6 +54,10 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "compile": [
+            "yarn start",
+            "php bin/console d:d:c && php bin/console d:s:c"
         ]
     },
     "conflict": {
