--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -9,9 +9,9 @@ monolog:
                 - ^/
         nested:
             type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            path: "php://stderr"
             level: debug
         console:
-            type:   console
+            type: console
             process_psr_3_messages: false
             channels: ["!event", "!doctrine"]
