--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "description": "Small presentation game",
     "author": "Alex \"Pierstoval\" Ancelet <pierstoval@gmail.com>",
     "scripts": {
-        "start": "gulp4 dump --prod && gulp4 dump-slides --prod",
-        "gulp": "gulp"
+        "start": "node ./node_modules/gulp4/bin/gulp dump --prod && node ./node_modules/gulp4/bin/gulp dump-slides --prod",
+        "gulp": "node ./node_modules/gulp4/bin/gulp"
     },
     "dependencies": {
         "glob": "^7.0",
