Add debug to gulp scripts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "Small presentation game",
     "author": "Alex \"Pierstoval\" Ancelet <pierstoval@gmail.com>",
     "scripts": {
-        "start": "node ./node_modules/gulp4/bin/gulp dump --prod && node ./node_modules/gulp4/bin/gulp dump-slides --prod",
+        "start": "node ./node_modules/gulp4/bin/gulp dump --prod -LLLL && node ./node_modules/gulp4/bin/gulp dump-slides --prod -LLLL",
         "gulp": "node ./node_modules/gulp4/bin/gulp",
         "postinstall": "yarn start"
     },
