--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "node ./node_modules/gulp4/bin/gulp dump --prod -LLLL && node ./node_modules/gulp4/bin/gulp dump-slides --prod -LLLL",
         "gulp": "node ./node_modules/gulp4/bin/gulp",
-        "postinstall": "yarn start"
+        "postinstall": "npm start"
     },
     "dependencies": {
         "glob": "^7.0",
@@ -24,6 +24,6 @@
     },
     "engines": {
         "node": "^8.9",
-        "yarn": "^1.3"
+        "yarn": "~1.3.0"
     }
 }
