--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "reveal.js": "^3.6.0"
     },
     "engines": {
-        "node": "^8.9",
-        "yarn": "~1.3.0"
+        "node": "^8.9"
     }
 }
