--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "author": "Alex \"Pierstoval\" Ancelet <pierstoval@gmail.com>",
     "scripts": {
         "gulp": "node ./node_modules/gulp4/bin/gulp",
-        "postinstall": "gulp4 dump && gulp4 dump-slides"
+        "postinstall": "gulp4 dump"
     },
     "dependencies": {
         "glob": "^7.0",
