--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.0",
         "symfony/twig-bundle": "^4.0",
-        "symfony/yaml": "^4.0",
-        "symfony/web-server-bundle": "^4.0"
+        "symfony/web-server-bundle": "^4.0",
+        "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "symfony/debug-bundle": "^3.3|^4.0",
