--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "compile": [
+            "npm run postinstall"
         ]
     },
     "conflict": {
