--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,8 @@
 # Copy this file to .env file for development, create environment variables when deploying to production
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
+SOCKET_PORT=80
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=054cc909c084e945185edda50d0a97c4
